--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 theme: linkhub-jekyll-theme
 
 # Site Configuration
-name: dealmeida.me  # Name of your website
-tagline: Links  # Set your preferred page title
-description: A free, open-source Jekyll link-in-bio theme.  # Also used as a meta description
+name: João de Almeida  # Name of your website
+tagline: João | Brand Designer  # Set your preferred page title
+description: Branding, typography, fotography.  # Also used as a meta description
 favicon: https://picsum.photos/32/32 # Path / URL to the favicon of your website (e.g., 'assets/images/favicon.png')
 logo: https://picsum.photos/200 # Path / URL to the logo (e.g., 'assets/images/logo.png')
 url: https://dealmeida.me # URL of your website
