--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,22 +1,9 @@
-- category: Blogs
+- category:
   items:
-    - title: Example
+    - title: Curriculum Vitae
       url: https://www.example.com
-      icon: ri:film-fill # Icons are optional.
-      tag: New
+      icon: pepicons-pencil:cv
 
     - title: Example 2
       url: https://www.example.org
       icon: simple-icons:googlenews
-
-- category: Products
-  items:
-    - title: Example 3
-      url: https://www.example.com
-
-- category: Works
-  items:
-    - title: Example 4
-      url: https://www.example.org
-      icon: clarity:language-solid
-      tag: Sale
