--- a/_data/social.yml
+++ b/_data/social.yml
@@ -8,5 +8,5 @@
   color: '#CCCCCC'
 - name: linkedin
   url: https://www.linkedin.com/in/jojoao/
-  icon: ri:linkedin-box-line
+  icon: ri:linkedin-line
   color: '#CCCCCC'
