--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,6 +8,9 @@
       url: https://www.example.com
       icon: line-md:image-twotone
       
-    - title: Curriculum Vitae
+    - title: Curriculum Vitae | PT
+      url: https://www.example.com
+      icon: line-md:clipboard-list-twotone
+    - title: Curriculum Vitae | EN
       url: https://www.example.com
       icon: line-md:clipboard-list-twotone
