--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: linkhub-jekyll-theme
 
 # Site Configuration
 name: João | Brand Designer # Name of your website
-tagline: # Set your preferred page title
+# tagline: # Set your preferred page title
 description: Branding | Typography | Photography  # Also used as a meta description
 favicon: https://picsum.photos/32/32 # Path / URL to the favicon of your website (e.g., 'assets/images/favicon.png')
 logo: https://picsum.photos/200 # Path / URL to the logo (e.g., 'assets/images/logo.png')
