--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - name: instagram
-  url: https://www.instagram.com/example
+  url: https://www.instagram.com/dealmeida.me
   icon: ri:instagram-line
   color: '#CCCCCC'
 - name: whatsapp
